c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/loop_header_postfix_and_prefix.c
int main(void) {
    int i = 100;
    int count = 0;
    while (i--) count++;
    if (count != 100)
        return 0;
    i = 100;
    count = 0;
    while (--i) count++;
    if (count != 99)
        return 0;
    return 1;
}