c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/statement_in_condition.c
int main(void) {
    while(int a) {
        2;
    }
}